config/prow/perfdash/perfdash-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: perfdash
  namespace: perfdash
  labels:
    app: perfdash
spec:
  selector:
    matchLabels:
      app: perfdash
  template:
    metadata:
      labels:
        app: perfdash
    spec:
      containers:
      - name: perfdash
        image: gcr.io/k8s-testimages/perfdash:2.34
        command:
          - /perfdash
          -   --www=true
          -   --dir=/www
          -   --address=0.0.0.0:8080
          -   --storageURL=https://prow.ppc64le-cloud.cis.ibm.net/view/gs
          -   --logsBucket=ppc64le-kubernetes
          -   --builds=100
          -   --githubConfigDir=https://api.github.com/repos/ppc64le-cloud/test-infra/contents/config/jobs/periodic/kubernetes/perf-tests/
          -   --allow-parsers-matching-all-tests=false
        imagePullPolicy: Always
        ports:
        - name: status
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          timeoutSeconds: 1
        resources:
          requests:
            cpu: 600m
            memory: 8Gi
          limits:
            cpu: 600m
            memory: 8Gi
      restartPolicy: Always
