config/prow/perfdash/perfdash-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: perfdash
  name: perfdash-status
  labels:
    app: perfdash
spec:
  selector:
    app: perfdash
  ports:
  - name: status
    port: 80
    targetPort: status
