config/prow/perfdash/perfdash-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: perfdash
  name: perfdash
  annotations:
    kubernetes.io/ingress.class: public-iks-k8s-nginx
spec:
  rules:
    - host: perf-dash.ppc64le-cloud.org
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: perfdash-status
                port:
                  name: status
  tls:
    - hosts:
        - perf-dash.ppc64le-cloud.org
      secretName: ppc64le-cloud
